# pytorch_wrapper

./: .gitignore  README.md  requirements.txt  setup.cfg  test_trainer.py  tox.ini  trainer.py  utils.py
checkpoints/: test_model.pt
pytorch_wrapper/: trainer.py  utils.py
tests/: test_trainer.py
