[metadata]
name = pytorch_wrapper
description = Wrapper autour de pytorch pour abstracter du bowler plate
author = Vincent Coulombe
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    
[options]
packages =
    pytorch_wrapper
install_requires =
    torch>=1.10.0
    numpy>=1.19.5
    scikit-learn>=0.24.2
    tqdm>=4.61.1
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24
